--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,11 +12,11 @@ depends=('libmusicbrainz3' 'libgnome-media-profiles' 'gstreamer0.10-base-plugins
 makedepends=('intltool' 'gnome-doc-utils>=0.20.0' 'pkgconfig' 'gnome-common' 'gtk-doc')
 options=(!emptydirs)
 #source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.32/${pkgname}-${pkgver}.tar.bz2)
-source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.xz)
+source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}-20110501.tar.xz)
 groups=('gnome-extra')
 install=sound-juicer.install
 url="http://www.burtonini.com/blog/computers/sound-juicer"
-sha256sums=('09fd7ebaa24b20a98be82bc10a9733f2e8d45bb31fb95a12535672d85272d8c2')
+sha256sums=('e4312ebf75c8798dd3f7a9d2d9ee7291b593bd68c7b0559742b91ca7a52674fe')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
