--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,26 +2,32 @@
 # Maintainer: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=networkmanager-openconnect
-pkgver=0.8.2
+pkgver=0.8.998
 pkgrel=1
 pkgdesc="NetworkManager VPN integration for openconnect"
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.gnome.org/projects/NetworkManager/"
-depends=("networkmanager>=${pkgver}" 'openconnect>=2.26' 'dbus-glib')
-makedepends=('intltool' 'gtk2' 'libglade' 'gconf' 'libgnome-keyring')
+depends=("networkmanager>=${pkgver}" 'openconnect' 'dbus-glib' 'gconf' 'libgnome-keyring')
+makedepends=('intltool')
 optdepends=('network-manager-applet: GNOME frontends to NetWorkmanager')
 options=('!libtool')
 install=$pkgname.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-openconnect/0.8/NetworkManager-openconnect-${pkgver}.tar.bz2)
-sha256sums=('6ef8ff1a14e112baf7d90cc1c19163c7895b56b60629641086540bacb8babb4f')
+source=(ftp://ftp.archlinux.org/other/networkmanager/NetworkManager-openconnect-${pkgver}-20110501.tar.xz)
+#source=(http://ftp.gnome.org/pub/GNOME/sources/NetworkManager-openconnect/0.8/NetworkManager-openconnect-${pkgver}.tar.bz2)
+sha256sums=('7f18ce15d985037c1bcf7208555182c296ab1a42a4dc33f78e5ceeb3492cdba5')
 
 build() {
   cd "${srcdir}/NetworkManager-openconnect-${pkgver}"
+  ./autogen.sh
   ./configure --prefix=/usr \
   	--sysconfdir=/etc \
 	--libexecdir=/usr/lib/networkmanager \
 	--disable-static
   make
+}
+
+package() {
+  cd "${srcdir}/NetworkManager-openconnect-${pkgver}"
   make DESTDIR="${pkgdir}" install
 }
