--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=slim
 pkgver=1.3.2
-pkgrel=4
+pkgrel=5
 pkgdesc='Desktop-independent graphical login manager for X11'
 arch=('i686' 'x86_64')
 url='http://slim.berlios.de/'
@@ -18,6 +18,7 @@ source=("http://download.berlios.de/${pkgname}/${pkgname}-${pkgver}.tar.gz"
         'pam.d'
         'logrotate'
         'gcc44.patch'
+	'ptr_pam.patch'
         'no-host.patch'
         'restart.patch'
         'sigterm.patch'
@@ -27,6 +28,7 @@ sha1sums=('e421d5487732c8317f8f591906661e014b036358'
           'a0e991ef0ac5120465a3be014a26e70ba073b6ae'
           'b969cc902c1d9915a5609141a652c77b2732407b'
           '51121d451116c768d0fc027ff1ea70aaaef036e7'
+          '640668c984a13593a1bfba8d3b503c005d5f401e'
           'b86eddd083fb9f6259e46c735f55ebe76c655bd3'
           '2d526bc0c498bf307ee50e2d22b4f53ffa0c4435'
           '0b35048723c527fb824c5e0f9b9064f751871785'
@@ -38,11 +40,12 @@ build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 
 	sed -i -e 's/png12/png14/g' Makefile
-	patch -p1 -i ../gcc44.patch
-	patch -p1 -i ../no-host.patch # do not set PAM host
-	patch -p1 -i ../restart.patch # restart X server if killed
-	patch -p1 -i ../sigterm.patch # do not wait for user input when SIGTERM'd
-	patch -p1 -i ../tty-slowness.patch # fix sluggish TTY after slim start
+	patch -p1 -i ../gcc44.patch   # FS#14815: lacks include for gcc-4.4
+	patch -p1 -i ../ptr_pam.patch # FS#23995: pointer mishandling confuses PAM
+	patch -p1 -i ../no-host.patch # cf patch: do not set PAM host
+	patch -p1 -i ../restart.patch # cf patch: restart X server if killed
+	patch -p1 -i ../sigterm.patch # FS#23984: do not wait for input when SIGTERM'd
+	patch -p1 -i ../tty-slowness.patch # FS#18313: fix sluggish TTY after slim start
 
 	make USE_PAM=1
 }
