--- a/python2-cairo/trunk/PKGBUILD
+++ b/python2-cairo/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=python2-cairo
-pkgver=1.8.10
+pkgver=1.10.0
 pkgrel=1
 pkgdesc="Python2 bindings for the cairo graphics library"
 arch=('i686' 'x86_64')
@@ -12,17 +12,21 @@ options=('!libtool')
 provides=("pycairo=${pkgver}")
 conflicts=('pycairo')
 replaces=('pycairo')
-source=(http://cairographics.org/releases/py2cairo-${pkgver}.tar.gz)
+source=(http://cairographics.org/releases/py2cairo-${pkgver}.tar.bz2)
 url="http://www.cairographics.org/pycairo"
-md5sums=('87421a6a70304120555ba7ba238f3dc3')
+md5sums=('20337132c4ab06c1146ad384d55372c5')
 
 build() {
-  cd "${srcdir}/pycairo-${pkgver}"
-  PYTHON=python2 ./configure --prefix=/usr
-  make
+  cd "${srcdir}/py2cairo-${pkgver}"
+  sed -i 's:bin/env python:bin/env python2:' waf
+  python2 ./waf --version
+  pushd .waf-*
+  popd
+  PYTHON=/usr/bin/python2 ./waf configure --prefix=/usr
+  PYTHON=/usr/bin/python2 ./waf build
 }
 
 package() {
-  cd "${srcdir}/pycairo-${pkgver}"
-  make DESTDIR="${pkgdir}" install
+  cd "${srcdir}/py2cairo-${pkgver}"
+  PYTHON=/usr/bin/python2 ./waf install --destdir="${pkgdir}"
 }
