upgpkg: python-gdata 2.0.14-1 Version bump to 2.0.14
git-svn-id: file:///srv/repos/svn-packages/svn@122028 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/python-gdata/trunk/PKGBUILD
+++ b/python-gdata/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 #$Id$
-# Maintainer: Angel 'angvp' Velasquez <angvp@archlinux.org>  
+# Maintainer: Angel Velasquez <angvp@archlinux.org> 
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Alessio 'mOLOk' Bolognino <themolok@gmail.com>
 # Contributor: Christophe Gueret <tolgam@homegnu.net>
 pkgname=python-gdata
-pkgver=2.0.13
+pkgver=2.0.14
 pkgrel=1
 arch=(any)
 pkgdesc="Python client library for Google data APIs"
@@ -15,7 +15,7 @@ provides=('gdata_py')
 replaces=('gdata_py')
 conflicts=('gdata_py')
 source=(http://gdata-python-client.googlecode.com/files/gdata-${pkgver}.tar.gz)
-md5sums=('bbbc7efd4ad8bb04ff9c0fbf88a0e871')
+md5sums=('29cf394b4f75aa4fae8c1b59079f2a02')
 
 build() {
   cd "${srcdir}/gdata-${pkgver}"
