remove replaces=('dcron'), conflicts with cron and not just dcron
git-svn-id: file:///srv/repos/svn-packages/svn@122030 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/cronie/trunk/PKGBUILD
+++ b/cronie/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname='cronie'
 pkgver=1.4.7
-pkgrel=6
+pkgrel=7
 pkgdesc='Daemon that runs specified programs at scheduled times and related tools'
 url='https://fedorahosted.org/cronie/'
 license=('custom:BSD')
@@ -27,8 +27,7 @@ backup=('etc/crontab'
         'etc/pam.d/crond'
         'etc/cron.deny')
 
-conflicts=('dcron')
-replaces=('dcron')
+conflicts=('cron')
 provides=('cron')
 groups=('base')
 
