--- a/dcron/trunk/PKGBUILD
+++ b/dcron/trunk/PKGBUILD
@@ -1,50 +1,42 @@
 # Maintainer: Paul Mattal <paul.archlinux.org>
 
 pkgname=dcron
-pkgver=4.4
-pkgrel=2
+pkgver=4.5
+pkgrel=1
 pkgdesc="dillon's lightweight cron daemon"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL')
 url="http://www.jimpryor.net/linux/dcron"
-backup=(var/spool/cron/root etc/conf.d/crond)
-depends=('glibc')
+backup=('var/spool/cron/root' 'etc/conf.d/crond')
+depends=('bash')
 provides=('cron')
-groups=('base')
-source=("http://www.jimpryor.net/linux/releases/${pkgname}-${pkgver}.tar.gz"
-	'dcron-logname.patch'
-	'dcron.rc.d'
-	'dcron.conf.d')
-md5sums=('02d848ba043a9df5bf2102a9f4bc04bd'
-	 'c6054421b48100f7a2a7a36e2d33c92a'
-	 '73693cdd59df526e729cdec99c5ed8fb'
-	 '5bfa07beb54d0beaf3f38225e4d5a9fa')
+conflicts=('cron')
+source=("http://www.jimpryor.net/linux/releases/${pkgname}-${pkgver}.tar.gz")
+md5sums=('078833f3281f96944fc30392b1888326')
 optdepends=('smtp-server: sending cron job output via email')
 install=$pkgname.install
 
 build() {
-	cd "$srcdir/${pkgname}-${pkgver}" || return 1
-
-	# patch to add LOGNAME environment variable
-	patch -p1 -i $srcdir/dcron-logname.patch || return 1
+	cd "$srcdir/${pkgname}-${pkgver}"
 
 	# by default, any member of group "users" can edit their own crontab
 	make \
 		PREFIX=/usr \
 		CRONTAB_GROUP=users \
 		CRONTABS=/var/spool/cron \
-		CRONSTAMPS=/var/spool/cronstamps \
-		|| return 1
-	make DESTDIR="$pkgdir" install || return 1
+		CRONSTAMPS=/var/spool/cronstamps
+}
+
+package() {
+	cd "$srcdir/${pkgname}-${pkgver}"
+	make DESTDIR="$pkgdir" install
 
 	# install standard configuration and scripts
-	install -d -m755 "$pkgdir/etc/cron."{hourly,daily,weekly,monthly} \
-		|| return 1
-	install -D -m755 extra/run-cron "$pkgdir/usr/sbin/run-cron" || return 1
-	install -D -m0600 extra/root.crontab "$pkgdir/var/spool/cron/root" \
-		|| return 1
+	install -d -m755 "$pkgdir/etc/cron."{hourly,daily,weekly,monthly} 
 
-	# install Arch configuration and launch scripts
-	install -D -m755 "$srcdir/dcron.rc.d" "$pkgdir/etc/rc.d/crond" || return 1
-	install -D -m0644 "$srcdir/dcron.conf.d" "$pkgdir/etc/conf.d/crond" || return 1
+	install -D -m755 extra/run-cron "$pkgdir/usr/sbin/run-cron"
+	install -D -m0600 extra/root.crontab "$pkgdir/var/spool/cron/root" 
+	install -D -m755 extra/crond.rc "$pkgdir/etc/rc.d/crond"
+	install -D -m0644 extra/crond.conf "$pkgdir/etc/conf.d/crond"
+	install -D -m644 extra/crond.logrotate "$pkgdir/etc/logrotate.d/crond"
 }
