file-roller doesn't start without nautilus. FS#24007. lets hope upstream is dropping that requirement
git-svn-id: file:///srv/repos/svn-packages/svn@122038 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/file-roller/trunk/PKGBUILD
+++ b/file-roller/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=file-roller
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Archive manipulator for GNOME"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('desktop-file-utils' 'gtk3' 'hicolor-icon-theme' 'dconf')
+depends=('desktop-file-utils' 'gtk3' 'hicolor-icon-theme' 'dconf' 'nautilus')
 makedepends=('intltool' 'gnome-doc-utils' 'pkg-config' 'nautilus' 'libsm')
 optdepends=('nautilus: nautilus shell extension'
             'unrar: the RAR uncompression program'
