--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgname=file-roller
 pkgver=3.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Archive manipulator for GNOME"
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('desktop-file-utils' 'gtk3' 'hicolor-icon-theme' 'dconf')
+depends=('desktop-file-utils' 'gtk3' 'hicolor-icon-theme' 'dconf' 'nautilus')
 makedepends=('intltool' 'gnome-doc-utils' 'pkg-config' 'nautilus' 'libsm')
 optdepends=('nautilus: nautilus shell extension'
             'unrar: the RAR uncompression program'
