--- a/kde-l10n/trunk/PKGBUILD
+++ b/kde-l10n/trunk/PKGBUILD
@@ -56,13 +56,13 @@ pkgname=('kde-l10n-ar'
          'kde-l10n-wa'
          'kde-l10n-zh_cn'
          'kde-l10n-zh_tw')
-pkgver=4.6.2
+pkgver=4.6.3
 pkgrel=1
 arch=('any')
 url='http://www.kde.org'
 license=('GPL')
 groups=('kde-l10n')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs' 'docbook-xsl')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdelibs')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ar-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-bg-${pkgver}.tar.bz2"
@@ -118,60 +118,60 @@ source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ar-${p
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-zh_CN-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-zh_TW-${pkgver}.tar.bz2"
         'ftp://ftp.archlinux.org/other/kde/kdepim-4.4.5-l10n.tar.bz2')
-sha1sums=('150bdd9faa20b79fbd1140552a3a5d857fe6b46a'
-         'd1751a3a6b2ad92282554db2623b3d33bfc4a007'
-         'e8cffe949f965873c1ef6d87eed3aa718aa5639d'
-         'd3174092e1f3257f058dfaa1d790fb0a4844a644'
-         '2b3216f206db681dc4d3d7ea9055202f4b45b03e'
-         '1d7a49db97f170b2ad18d95c9967095efab563e2'
-         'd2cba2f6f424aceebfb12d44e0b0c82ab4173252'
-         'e48be5ca269843ace229847b8f8b19726d67c5af'
-         '18d9a7e5b5e90d50b8353cf711f6c92dc805c700'
-         '1beaffeec608392d48674a80d3bccd40ea53897c'
-         '0ae89aaa42a11b494926724fb4b21791a5e69527'
-         'b1eeab261c76aab4efd780a8c2278cbca0c5503d'
-         '41127ac24ff70bc30ce1d76ba3000be67affc2c2'
-         'cf01dc4c47cd2939d9ca6cf5cca9389c0953b3e2'
-         'dbe3ac2a99c951711f239d270f322e94d91c7f1b'
-         'fd3ea6a6c71f1c44abdd71ca9bab0bb66df48e9c'
-         '3199303576415332a7d28748f951954cf38d1bdb'
-         '37e8d387a910bc392b7ad73e3aa843d5e48c81ea'
-         '162f40695b1cc8b7795dc1978dc23b1ccc8094af'
-         'a07e8c7326d8d427b43e50e5a68987649b8d882e'
-         '5539ec0bc5571308d9567d713dbd6f6708f96dea'
-         'd0a7c355ecdb3ca985fa96ac3697c1ec5bcb0372'
-         '93c3af7aa5ac47c9967b566d11f866224d90c5de'
-         '5c8d2468639bc146557e5d9b509028756537a112'
-         '8ae0add6e904cd4432e4806218a760877359f1cc'
-         '0d9517ee8eb130f0c47a26728dc73da4ab35d6a5'
-         'b7ba76576e8342b49d132855570753101cc4327b'
-         '3ab10a605df76f4e34bdbe8c47f8869573fa5a5a'
-         '684d38eb04ad376647a6e70cac40b5eb7c8701b5'
-         'a820c43bf72fb1f957fa297925125e9c4251c78b'
-         'a125aa3f00c14184762a6e1c445b6e9911c57082'
-         'cce1e4adf8706ae78a3011aaffad75f0aad84f10'
-         'aad32f4e280e7c79db1e714a80b1ba34d58cb481'
-         'dc3d43d9c57a81cb44c4212a56a9f00f0cef6b65'
-         '64483b5a00c11f5cd2c53e4ebe63bf357bfa768b'
-         '5a2725ad591f92077afe5974f11305357fb8f33b'
-         'aafe0ca9a7b472e00c74d04192b37df4fd662c69'
-         'b5f3ac67c03819c1e77b586a088a1ca786a68aab'
-         'f2514ab34bf926950810762ef9d2382a83e4f588'
-         '4575af70c37ca88bc73db0bdd7833ab1a8e8e15a'
-         'cb98e921834217e565eb5e48a3087ced8da7e85e'
-         '5aec2c7aeba7d4e7ebff61743ea5dd5241c7edb7'
-         'f52023f0183f45b7808b225b0e262d9d136f2de0'
-         'ab69b258d5534d3c9818eb68e6090f4997743a57'
-         'c623f474d5541780c5a987f4951cffbfaa1e687a'
-         '90d10f3bd0bf3cda5bfb5acc6d5d87e02f4110b0'
-         '0d63e27aa27cadc146e3b02956478a1f3aadd0c1'
-         '379436f15b8b5e1e813e246347a240b488ae255c'
-         '12224e60b6fe733d4d70e43ad2654dc73ae3c05b'
-         'caa5d491b0c43c7ca1100b613048eadc0f2fd107'
-         '7bd8311dc9883adb6f76e279ef95c0cdb93182db'
-         'e6d917974fc9f38233d73600f1df20ca1f5fbc10'
-         '70f8d0ddab84075eb88d6173dc21f8b4e59417e8'
-         'b5753286cdf774b6165f2bdec9c1038174d35435')
+sha1sums=('a433fbfcde29131bca6a06fdcb6d44c748008927'
+         '8e2b8c7b8554e1facfb02656a4dcfb8b3fe7d349'
+         '4f996f389b629ff079c1deb68156b82ddc8b0037'
+         '6fdd39a67eaa3c09ccdd266b3824ec2cde690222'
+         '8a485a912c272c5660da8b9113ae6637daecaaca'
+         '71c61b0f09e47eb945420581a6dc1e46baefcefb'
+         '6abb82ad32329672ca254e1b971c3d61274a20d4'
+         '1b22436c2aa5b4ec51c64d552455ff658ae26ece'
+         'd643c59fea3104df7c362a6ea63cefa785e26938'
+         '06a1f04cd692180c6c2ea43034f0ba47aefc4082'
+         'ee4cf1ea49671d13ff725afcaab4d5ce57025924'
+         '9e8ec39c769ca02d60531b11e41fbb1381433038'
+         'db2926ab71d0a67a9c017154580708cec6a37bef'
+         'aa2ba512e244ee03807e5f6542499cd0d27d3df7'
+         'd63493d9a887a4e45a40738154a7b362c64bf592'
+         'd94bb75da54d7257093429a021d6f952e389ad73'
+         '631463f7fe3a90f293632ac5782a3035ff75091c'
+         '68a9f3fdcfd9f4d5b44fdf57261201d035f9b48a'
+         'e2ba20baf3d53e1802abf91f696df56bd966c0fe'
+         '83b7df72f80aaaeaced7ad7f89ae5a123fc3a290'
+         'a5c9d9f49afba78815ecf7735a8cc8d69def5327'
+         '0c820c3a1d32f3ad121ad0d08a93b42000a2cad1'
+         '631bbce80890b480bc833141b5068dc2c6f684af'
+         '5345433637df4b5ec842474d67ab4135a804831d'
+         'f040f9587913acff0cf5f87ac67433d29455aeeb'
+         '85d9a7bef80c53322b5dcb8bfc7c79c0ee2910f1'
+         '51a7ef1ad1c0664d4a409580362fb6d6d89ec391'
+         'a593eb1134dcf1fdde7e67e46636c91fc72bab8d'
+         'dd074c3ff03582006c5e202dd6312475320b5567'
+         'aa5d5b2fde391cd373b9c00047f2523749f22fbf'
+         'fb4438d0fb280f56e310f330953ab08ea4e365f2'
+         'e6c5377ec11ebc81131b1b552d6f7a74c93729a1'
+         '1f2a48c213abacccb086f9ba38349da035bdf027'
+         'db0216de633f032efe0cb2e915607f9a25e7208d'
+         '45ca1d44f6140cfef0b75f6510bb623f9b1ee6ac'
+         'a364726d1d263b79930d1ed43b6e2a8957adba0d'
+         '116dd6c6b05a6bf7a9913e6cd2a6ff0ab5a90929'
+         '585f7af652f7193cf79789abc7cc422d1b9beda3'
+         'a0d97485786c98bce8069452af28ae3f60c55225'
+         'cd12faa4fe8946ad92f0233c075d617749b1c022'
+         '4c2ee361834a7e02f61447d4c705b8ae2b3c5802'
+         '309736c15ed42c80c70bfc9feebd175f1bd91014'
+         '5c13e0f02db44b09c3d2fe3b9f749d26da08851c'
+         '1cfeb55c43ee80f09fac78c9d109788dd3969a1e'
+         'f460e6df1e0b09ea3de697ad4764f81fb3091f79'
+         '73d958081dce0d566bc0ed73ed23a01cefd61d4e'
+         'f4acc7c3850dd7b1ff2aa6f6672cacf3d9e1363d'
+         '44e6490e4fa5be591189af62322399b3a13d7aae'
+         '1f3c5bbd6f5c92b1e97c111dc0e734c5219481aa'
+         '9c8d7974340218109bc3666c46dccaf5fac8d3ef'
+         '7f0aaeeb3bc7cf0d0e142fb2372d7064d2277bf7'
+         '7cab80d92e5ed82e2e16614c0c84bc58c20b38bb'
+         '3b6d33832415d56c09c88fe598a90f1fb000788c'
+         'f6046c4a7687f8a5f25d1dac1d910401b8fa7566')
 
 build() {
 	cd ${srcdir}
