--- a/a52dec/trunk/PKGBUILD
+++ b/a52dec/trunk/PKGBUILD
@@ -1,18 +1,19 @@
 # $Id$
-# Maintainer: Thomas Baechler <thomas@archlinux.org>
-# contributor: Sarah Hay <sarahhay@mb.sympatico.ca>
+# Maintainer:
+# Contributor: Thomas Baechler <thomas@archlinux.org>
+# Contributor: Sarah Hay <sarahhay@mb.sympatico.ca>
 
 pkgname=a52dec
 pkgver=0.7.4
-pkgrel=4
-pkgdesc="A free library for decoding ATSC A/52 streams."
+pkgrel=5
+pkgdesc="A free library for decoding ATSC A/52 streams"
+url="http://liba52.sourceforge.net/"
 arch=('i686' 'x86_64')
 license=('GPL2')
 depends=('glibc')
 options=(!libtool)
-source=(http://liba52.sourceforge.net/files/${pkgname}-${pkgver}.tar.gz
-        a52dec-0.7.4-build.patch)
-url="http://liba52.sourceforge.net/"
+source=("http://liba52.sourceforge.net/files/${pkgname}-${pkgver}.tar.gz"
+        'a52dec-0.7.4-build.patch')
 md5sums=('caa9f5bc44232dc8aeea773fea56be80'
          'fa16f224a7dceb7613824380abef0052')
 
@@ -22,6 +23,10 @@ build() {
   ./bootstrap
   ./configure --prefix=/usr --enable-shared
   make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install
   install -m644 liba52/a52_internal.h "${pkgdir}/usr/include/a52dec/"
 }
