--- a/aubio/trunk/PKGBUILD
+++ b/aubio/trunk/PKGBUILD
@@ -5,23 +5,23 @@
 
 pkgname=aubio
 pkgver=0.3.2
-pkgrel=3
+pkgrel=4
 pkgdesc="A library for audio labelling"
 arch=('i686' 'x86_64')
 url="http://aubio.piem.org/"
 license=('GPL')
 depends=('libsamplerate' 'fftw' 'jack')
 options=('!libtool')
-source=(http://aubio.piem.org/pub/${pkgname}-${pkgver}.tar.gz)
+source=("http://aubio.piem.org/pub/${pkgname}-${pkgver}.tar.gz")
 md5sums=('ffc3e5e4880fec67064f043252263a44')
 
 build() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr
   make
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 }
