upgpkg: aubio 0.3.2-4 update url and source
git-svn-id: file:///srv/repos/svn-packages/svn@122072 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aubio/trunk/PKGBUILD
+++ b/aubio/trunk/PKGBUILD
@@ -8,11 +8,11 @@ pkgver=0.3.2
 pkgrel=4
 pkgdesc="A library for audio labelling"
 arch=('i686' 'x86_64')
-url="http://aubio.piem.org/"
+url="http://aubio.org/"
 license=('GPL')
 depends=('libsamplerate' 'fftw' 'jack')
 options=('!libtool')
-source=("http://aubio.piem.org/pub/${pkgname}-${pkgver}.tar.gz")
+source=("http://aubio.org/pub/${pkgname}-${pkgver}.tar.gz")
 md5sums=('ffc3e5e4880fec67064f043252263a44')
 
 build() {
