--- a/eject/trunk/PKGBUILD
+++ b/eject/trunk/PKGBUILD
@@ -1,24 +1,29 @@
 # $Id$
-# Maintainer: dorphell <dorphell@archlinux.org>
+# Maintainer:
+# Contributor: dorphell <dorphell@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=eject
 pkgver=2.1.5
-pkgrel=4
-pkgdesc="Eject is a program for ejecting removable media under software control"
+pkgrel=5
+pkgdesc="A program for ejecting removable media under software control"
 arch=('i686' 'x86_64')
-url="http://ca.geocities.com/jefftranter@rogers.com/eject.html"
+url="http://eject.sourceforge.net/"
 license=('GPL')
 depends=('glibc')
-source=(ftp://mirrors.kernel.org/slackware/slackware-13.1/source/a/$pkgname/$pkgname-$pkgver.tar.bz2 
-        eject-2.1.5-handle-spaces.patch)
+source=("ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.bz2"
+        'eject-2.1.5-handle-spaces.patch')
 md5sums=('5a6cab2184ae4ed21128054d931d558f'
          '595b97c3bd56fd41e3b01b07885f81dc')
 
 build() {
-  cd $srcdir/$pkgname
-  patch -Np0 -i ../eject-2.1.5-handle-spaces.patch || return 1
-  ./configure --prefix=/usr --mandir=/usr/share/man || return 1
-  make || return 1
-  make DESTDIR=$pkgdir install || return 1
+  cd "${srcdir}/${pkgname}"
+  patch -Np0 -i "${srcdir}/eject-2.1.5-handle-spaces.patch"
+  ./configure --prefix=/usr --mandir=/usr/share/man
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}"
+  make DESTDIR="${pkgdir}" install
 }
