--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,22 +2,28 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=openexr
-pkgver=1.6.1
+pkgver=1.7.0
 pkgrel=1
+pkgdesc="An high dynamic-range image file format library"
+url="http://www.openexr.com/"
+arch=('i686' 'x86_64')
+license=('BSD')
 depends=('zlib' 'ilmbase')
-pkgdesc="openexr library for EXR images"
-arch=(i686 x86_64)
 options=('!libtool')
-license=('custom')
-source=("http://savannah.nongnu.org/download/$pkgname/$pkgname-$pkgver.tar.gz" 'gcc43.patch')
-url="http://www.openexr.org"
-md5sums=('11951f164f9c872b183df75e66de145a' '7c83ee3d69ad688142e7de63cb68e70a')
+source=("http://download.savannah.nongnu.org/releases/${pkgname}/${pkgname}-${pkgver}.tar.gz"
+        'gcc43.patch')
+md5sums=('27113284f7d26a58f853c346e0851d7a'
+         'd91fae759053a70bcedcf02eb33ca4a2')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
-  patch -p1 -i $srcdir/gcc43.patch || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  patch -p0 -i ${srcdir}/gcc43.patch
   ./configure --prefix=/usr
-  make || return 1
-  make DESTDIR=$startdir/pkg install
-  install -D -m644 COPYING $pkgdir/usr/share/licenses/$pkgname/COPYING
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
+  install -D -m644 COPYING "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
