--- a/libktorrent/trunk/PKGBUILD
+++ b/libktorrent/trunk/PKGBUILD
@@ -3,20 +3,20 @@
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libktorrent
-pkgver=1.1.0
+pkgver=1.1.1
 pkgrel=1
-pkgdesc="A BitTorrent library based on KDE Platform"
+pkgdesc="A BitTorrent protocol implementation"
 arch=('i686' 'x86_64')
 url="http://ktorrent.org"
 license=('GPL2')
 depends=('kdelibs')
 makedepends=('automoc4' 'cmake' 'boost')
-source=("http://ktorrent.org/downloads/4.1.0/${pkgname}-${pkgver}.tar.bz2")
+source=("http://ktorrent.org/downloads/4.1.1/${pkgname}-${pkgver}.tar.bz2")
 options=('libtool')
-md5sums=('76d3e58bbf2e4df7e97421e06ebf8fb8')
+md5sums=('96de8dd6d6cea4255ce946bb4cd69836')
 
 build() {
-  cd ${srcdir}
+  cd "${srcdir}"
   mkdir build
   cd build
   cmake ../${pkgname}-${pkgver} \
@@ -26,6 +26,6 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/build
-  make DESTDIR=${pkgdir} install
+  cd "${srcdir}/build"
+  make DESTDIR="${pkgdir}" install
 }
