--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Georg Grabler <ggrabler@gmail.com>
 
 pkgname=ktorrent
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
-pkgdesc="A BitTorrent program for KDE"
+pkgdesc="A powerful BitTorrent client for KDE"
 arch=('i686' 'x86_64')
 url="http://ktorrent.org"
 license=('GPL2')
@@ -16,16 +16,16 @@ source=("http://ktorrent.org/downloads/${pkgver}/${pkgname}-${pkgver}.tar.bz2"
         'httpserver.patch')
 install=${pkgname}.install
 options=('libtool')
-md5sums=('3981c00810217e88b9772438df31df08'
+md5sums=('affadf7c7198e5aa430e91ab75800296'
          '1f25b94615b0bbfa0457c99fb20de3e6')
 
 build() {
-	cd ${srcdir}/${pkgname}-${pkgver}
+	cd "${srcdir}/${pkgname}-${pkgver}"
 
 	# build time patch
-	patch -Np0 -i ${srcdir}/httpserver.patch
+	patch -p0 -i "${srcdir}/httpserver.patch"
 
-	cd ${srcdir}
+	cd "${srcdir}"
 	mkdir build
 	cd build
 	cmake ../${pkgname}-${pkgver} \
@@ -36,6 +36,6 @@ build() {
 }
 
 package() {
-	cd ${srcdir}/build
-	make DESTDIR=${pkgdir} install
+	cd "${srcdir}/build"
+	make DESTDIR="${pkgdir}" install
 }
