upgpkg: dcron 4.5-2 remove logrotate file; add prune-cronestamps cronjob
git-svn-id: file:///srv/repos/svn-packages/svn@122117 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/dcron/trunk/PKGBUILD
+++ b/dcron/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=dcron
 pkgver=4.5
-pkgrel=1
+pkgrel=2
 pkgdesc="dillon's lightweight cron daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -38,5 +38,7 @@ package() {
 	install -D -m0600 extra/root.crontab "$pkgdir/var/spool/cron/root" 
 	install -D -m755 extra/crond.rc "$pkgdir/etc/rc.d/crond"
 	install -D -m0644 extra/crond.conf "$pkgdir/etc/conf.d/crond"
-	install -D -m644 extra/crond.logrotate "$pkgdir/etc/logrotate.d/crond"
+	install -D -m644 extra/crontab.vim "$pkgdir/usr/share/vim/vimfiles/ftplugin/crontab.vim"
+	sed -i -e 's=/var/spool/cron/cronstamps=/var/spool/cronstamps=' extra/prune-cronstamps
+	install -D -m755 extra/prune-cronstamps "$pkgdir/etc/cron.d/prune-cronstamps"
 }
