--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=ekiga
 pkgver=3.3.0
-pkgrel=2
+pkgrel=3
 pkgdesc="VOIP/Videoconferencing app with full SIP and H.323 support (GnomeMeeting expanded and renamed)"
 url="http://www.ekiga.org"
 license=(GPL)
 arch=(i686 x86_64)
-depends=('opal' 'boost-libs' 'libxv' 'libnotify' 'hicolor-icon-theme' 'avahi' 'gtk2')
+depends=('opal' 'boost-libs' 'libxv' 'libnotify' 'hicolor-icon-theme' 'avahi' 'gtk2' 'gconf')
 makedepends=('intltool' 'gnome-doc-utils' 'evolution-data-server' 'boost')
 optdepends=('evolution-data-server: Evolution integration')
 provides=('gnomemeeting')
