upgpkg: cyrus-sasl-plugins 2.1.23-5 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@122144 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/cyrus-sasl-plugins/trunk/PKGBUILD
+++ b/cyrus-sasl-plugins/trunk/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=cyrus-sasl-plugins
 pkgver=2.1.23
-pkgrel=4
+pkgrel=5
 pkgdesc="Cyrus Simple Authentication Service Layer (SASL) library"
 arch=('i686' 'x86_64')
 url="http://cyrusimap.web.cmu.edu/"
 license=('custom')
-depends=('postgresql-libs>=9.0.3' 'heimdal>=1.3.3' 'libldap>2.4'
+depends=('postgresql-libs>=9.0.3' 'krb5' 'libldap>2.4'
         'libmysqlclient>=5.5.10')
 source=(ftp://ftp.andrew.cmu.edu/pub/cyrus-mail/cyrus-sasl-${pkgver}.tar.gz
         cyrus-sasl-2.1.22-gcc44.patch
