--- a/gnome-python-desktop/trunk/PKGBUILD
+++ b/gnome-python-desktop/trunk/PKGBUILD
@@ -4,40 +4,29 @@
 # Contributor: Wael Nasreddine <gandalf@siemens-mobiles.org>
 
 pkgbase=gnome-python-desktop
-pkgname=('gnome-python-desktop' 'python-brasero' 'python-bugbuddy' 'python-evince' 'python-evolution' 'python-gnomeapplet' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-mediaprofiles' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint')
+pkgname=('gnome-python-desktop' 'python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint')
 pkgver=2.32.0
-pkgrel=4
+pkgrel=5
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 options=('!libtool')
-makedepends=('intltool' 'pkg-config' 'gnome-media' 'gnome-panel-bonobo' 'gnome-python' 'gtksourceview' 'libgnomeprintui' 'libgtop' 'totem-plparser' 'evince' 'bug-buddy' 'brasero' 'gnome-desktop' 'metacity')
+makedepends=('intltool' 'pkg-config' 'gnome-python' 'gtksourceview' 'libgnomeprintui' 'libgtop' 'totem-plparser' 'bug-buddy' 'gnome-desktop2' 'metacity' 'librsvg')
 url="http://www.gnome.org"
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgbase}/2.32/${pkgbase}-${pkgver}.tar.bz2)
 sha256sums=('09dbd580bf3b0ef60f91b090eafe6d08ddcc50a609e2b425a7f8eca46d4e0ee9')
 
 build() {
   cd "${srcdir}/${pkgbase}-${pkgver}"
-  sed -i 's|evince-document-2.30|evince-document-2.32|g' configure
-  sed -i 's|evince-view-2.30|evince-view-2.32|g' configure
   PYTHON=/usr/bin/python2 ./configure --prefix=/usr --enable-metacity
   make
 }
 
 package_gnome-python-desktop() {
-  depends=('python-brasero' 'python-bugbuddy' 'python-evince' 'python-evolution' 'python-gnomeapplet' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-mediaprofiles' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint' 'gnome-python')
+  depends=('python-bugbuddy' 'python-evolution' 'python-gnomedesktop' 'python-gnomekeyring' 'python-gtop' 'python-metacity' 'python-rsvg' 'python-totem-plparser' 'python-wnck' 'python-gtksourceview' 'python-gnomeprint' 'gnome-python')
   pkgdesc="Python bindings for the GNOME desktop environment"
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make install-pkgconfigDATA DESTDIR="${pkgdir}"
-}
-
-package_python-brasero() {
-  depends=('pygtk' 'brasero')
-  pkgdesc="Python bindings for brasero"
-
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  make -C braseroburn install DESTDIR="${pkgdir}"
-  make -C braseromedia install DESTDIR="${pkgdir}"
 }
 
 package_python-bugbuddy() {
@@ -46,14 +35,6 @@ package_python-bugbuddy() {
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make install-pkgpyexecPYTHON DESTDIR="${pkgdir}"
-}
-
-package_python-evince() {
-  depends=('pygtk' 'evince')
-  pkgdesc="Python bindings for evince"
-
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  make -C evince install DESTDIR="${pkgdir}"
 }
 
 package_python-evolution() {
@@ -66,17 +47,9 @@ package_python-evolution() {
   install -m644 evolution/ecal.defs "${pkgdir}/usr/share/pygtk/2.0/defs/"
 }
 
-package_python-gnomeapplet() {
-  depends=('pygtk' 'libgnomeui' 'gnome-panel-bonobo' 'python2-bonobo')
-  pkgdesc="Python bindings for gnome-panel"
-
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  make -C gnomeapplet install DESTDIR="${pkgdir}"
-}
-
 package_python-gnomedesktop() {
-  depends=('pygtk' 'gnome-desktop' 'python2-gnomevfs')
-  pkgdesc="Python bindings for gnome-desktop"
+  depends=('pygtk' 'gnome-desktop2' 'python2-gnomevfs')
+  pkgdesc="Python bindings for gnome-desktop 2.x"
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make -C gnomedesktop install DESTDIR="${pkgdir}"
@@ -96,14 +69,6 @@ package_python-gtop() {
 
   cd "${srcdir}/${pkgbase}-${pkgver}"
   make -C gtop install DESTDIR="${pkgdir}"
-}
-
-package_python-mediaprofiles() {
-  depends=('pygtk' 'gnome-media')
-  pkgdesc="Python bindings for gnome-media"
-
-  cd "${srcdir}/${pkgbase}-${pkgver}"
-  make -C mediaprofiles install DESTDIR="${pkgdir}"
 }
 
 package_python-metacity() {
