--- a/gcin/trunk/PKGBUILD
+++ b/gcin/trunk/PKGBUILD
@@ -13,7 +13,7 @@ url='http://cle.linux.org.tw/gcin/download/'
 depends=('gtk2' 'libxtst')
 makedepends=('anthy' 'qt')
 optdepends=('qt: support for qt4 input method')
-source=("${url}download/${pkgname}-${pkgver}.tar.bz2"
+source=("${url}${pkgname}-${pkgver}.tar.bz2"
         'fix_x86_64_libdir.patch'
         'fix_qt4_paths.patch')
 sha1sums=('acbfffbaf7eccd32ef251493e8c03dd126023b51'
