fix change dir command
git-svn-id: file:///srv/repos/svn-packages/svn@122180 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/sip/trunk/PKGBUILD
+++ b/sip/trunk/PKGBUILD
@@ -18,12 +18,12 @@ build() {
   cd "${srcdir}"
   cp -r ${pkgbase}-${pkgver} python2-${pkgbase}-${pkgver}
 
-  cd ${pkgbase}-${pkgver}
+  cd "${srcdir}/${pkgbase}-${pkgver}"
   python configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
-
+  
   ### Python2 version ###
-  cd python2-${pkgbase}-${pkgver}
+  cd "${srcdir}/python2-${pkgbase}-${pkgver}"
   python2 configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
 }
