--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -18,12 +18,12 @@ build() {
   cd "${srcdir}"
   cp -r ${pkgbase}-${pkgver} python2-${pkgbase}-${pkgver}
 
-  cd ${pkgbase}-${pkgver}
+  cd "${srcdir}/${pkgbase}-${pkgver}"
   python configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
-
+  
   ### Python2 version ###
-  cd python2-${pkgbase}-${pkgver}
+  cd "${srcdir}/python2-${pkgbase}-${pkgver}"
   python2 configure.py CFLAGS="${CFLAGS}" LFLAGS="${LDFLAGS}"
   make
 }
