fix change dir command
git-svn-id: file:///srv/repos/svn-packages/svn@122181 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/pyqt/trunk/PKGBUILD
+++ b/pyqt/trunk/PKGBUILD
@@ -19,7 +19,7 @@ build() {
   cd "${srcdir}"
   cp -r PyQt-x11-gpl-${pkgver} Py2Qt-x11-gpl-${pkgver}
 
-  cd PyQt-x11-gpl-${pkgver}
+  cd "${srcdir}/PyQt-x11-gpl-${pkgver}"
   python configure.py \
     --confirm-license \
     --qsci-api
@@ -30,7 +30,7 @@ build() {
   make
 
   ### Python2 version ###
-  cd Py2Qt-x11-gpl-${pkgver}
+  cd "${srcdir}/Py2Qt-x11-gpl-${pkgver}"
   python2 configure.py \
     --confirm-license \
     -v /usr/share/sip \
