adjust python2-pyqt dependence
git-svn-id: file:///srv/repos/svn-packages/svn@122185 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -12,8 +12,8 @@ pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-qt' 'kdepim-runtime' 'mono'
-	'kdegraphics-okular' 'qwt' 'boost' 'qscintilla' 'ruby')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'python2-pyqt' 'kdepim-runtime' 'mono'
+	         'kdegraphics-okular' 'qwt' 'boost' 'qscintilla' 'ruby')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
 sha1sums=('4ecc6ac378c241472aa75680abfafd8d57672653')
 
