--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -14,7 +14,7 @@ url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeadmin')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebindings-python'
-	    'system-config-printer-common' 'python2-qt')
+	         'system-config-printer-common' 'python2-pyqt')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'syslog-path.patch')
 sha1sums=('141e8e794ebd5341940d2d22986b7376a2abefbf'
@@ -70,7 +70,7 @@ package_kdeadmin-kuser() {
 
 package_kdeadmin-system-config-printer-kde() {
 	pkgdesc='Configure local and remote Printers'
-	depends=('kdebindings-python' 'system-config-printer-common' 'python2-qt')
+	depends=('kdebindings-python' 'system-config-printer-common' 'python2-pyqt')
 	url="http://kde.org/applications/system/printerapplet/"
 	cd $srcdir/build/system-config-printer-kde
 	make DESTDIR=$pkgdir install
