adjust python2-pyqt dependence
git-svn-id: file:///srv/repos/svn-packages/svn@122187 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -46,7 +46,7 @@ package_kdebindings-csharp() {
 
 package_kdebindings-python() {
 	pkgdesc='KDE bindings for python'
-	depends=('kdepim-runtime' 'python2-qt' 'qscintilla')
+	depends=('kdepim-runtime' 'python2-pyqt' 'qscintilla')
 	cd $srcdir/build/python
 	make DESTDIR=$pkgdir install
 
