--- a/gcin/trunk/PKGBUILD
+++ b/gcin/trunk/PKGBUILD
@@ -5,14 +5,16 @@
 
 pkgname=gcin
 pkgver=1.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Input method server supporting various input methods'
 arch=('i686' 'x86_64')
 license=('LGPL')
 url='http://cle.linux.org.tw/gcin/download/'
 depends=('gtk2' 'libxtst')
-makedepends=('anthy' 'qt')
-optdepends=('qt: support for qt4 input method')
+makedepends=('qt' 'gtk3' 'anthy')
+optdepends=('qt: support for qt4 input method'
+            'gtk3: support for gtk3 input method'
+            'anthy: support for anthy input method')
 source=("${url}${pkgname}-${pkgver}.tar.bz2"
         'fix_x86_64_libdir.patch'
         'fix_qt4_paths.patch')
@@ -26,6 +28,8 @@ build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 	patch -p1 -i ../fix_x86_64_libdir.patch
 	patch -p1 -i ../fix_qt4_paths.patch
+	sed '/^GTK2IM=/c GTK2IM=gtk-2.0/2.10.0/immodules' -i gtk-im/Makefile
+	sed '/^GTK3IM=/c GTK3IM=gtk-3.0/3.0.0/immodules' -i gtk-im/Makefile # FS#24051
 	./configure --prefix=/usr --use_i18n=Y
 	make
 }
