--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=bluez
 pkgver=4.92
-pkgrel=1
+pkgrel=2
 pkgdesc="Libraries and tools for the Bluetooth protocol stack"
 url="http://www.bluez.org/"
 arch=('i686' 'x86_64')
@@ -48,7 +48,7 @@ build() {
     --enable-pand \
     --enable-dund \
     --enable-cups \
-    --enable-udevrules \
+    --disable-udevrules \
     --enable-configfiles
   make
 }
