upgpkg: bluez 4.92-2 disabled the udev rule to fix a bug with initscript, see http://mailman.archlinux.org/pipermail/arch-general/2011-April/019787.html
git-svn-id: file:///srv/repos/svn-packages/svn@122198 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/bluez/trunk/PKGBUILD
+++ b/bluez/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=bluez
 pkgver=4.92
-pkgrel=1
+pkgrel=2
 pkgdesc="Libraries and tools for the Bluetooth protocol stack"
 url="http://www.bluez.org/"
 arch=('i686' 'x86_64')
@@ -48,7 +48,7 @@ build() {
     --enable-pand \
     --enable-dund \
     --enable-cups \
-    --enable-udevrules \
+    --disable-udevrules \
     --enable-configfiles
   make
 }
