--- a/pysmbc/trunk/PKGBUILD
+++ b/pysmbc/trunk/PKGBUILD
@@ -5,20 +5,20 @@
 pkgname=pysmbc
 pkgver=1.0.10
 pkgrel=1
-pkgdesc="Python libsmbclient bindings"
+pkgdesc="Python bindings for libsmbclient"
 arch=('i686' 'x86_64')
-url="http://cyberelk.net/tim/software/pysmbc/"
+url="http://pypi.python.org/pypi/pysmbc/"
 license=('GPL')
 depends=('python2' 'smbclient')
-source=("http://cyberelk.net/tim/data/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+source=("http://pypi.python.org/packages/source/p/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('72cc12d6c037c68ca81355151a58083b')
 
 build(){
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   python2 setup.py build
 }
 
 package() {
-  cd ${srcdir}/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   python2 setup.py install --root="$pkgdir" --optimize=1
 }
