--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,21 +1,22 @@
 # $Id$
-# Maintainer: Aaron Griffin <aaron@archlinux.org>
+# Maintainer: Gaetan Bisson <bisson@archlinux.org>
+# Contributor: Aaron Griffin <aaron@archlinux.org>
 # Contributor: judd <jvinet@zeroflux.org>
 
 pkgname=openssh
-pkgver=5.8p1
-pkgrel=2
+pkgver=5.8p2
+pkgrel=1
 pkgdesc='Free version of the SSH connectivity tools'
 arch=('i686' 'x86_64')
 license=('custom:BSD')
 url='http://www.openssh.org/portable.html'
 backup=('etc/ssh/ssh_config' 'etc/ssh/sshd_config' 'etc/pam.d/sshd' 'etc/conf.d/sshd')
-depends=('tcp_wrappers' 'krb5' 'libedit')
+depends=('tcp_wrappers' 'heimdal' 'libedit')
 source=("ftp://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/${pkgname}-${pkgver}.tar.gz"
         'sshd.confd'
         'sshd.pam'
         'sshd')
-sha1sums=('adebb2faa9aba2a3a3c8b401b2b19677ab53f0de'
+sha1sums=('e610270e0c5484fb291cd81bbcbefbeb5e391a62'
           'ec102deb69cad7d14f406289d2fc11fee6eddbdd'
           '660092c57bde28bed82078f74011f95fc51c2293'
           '6b7f8ebf0c1cc37137a7d9a53447ac8a0ee6a2b5')
