--- a/kdebase-workspace/trunk/PKGBUILD
+++ b/kdebase-workspace/trunk/PKGBUILD
@@ -25,6 +25,7 @@ backup=('usr/share/config/kdm/kdmrc'
         'etc/pam.d/kde'
         'etc/pam.d/kde-np'
         'etc/pam.d/kscreensaver')
+options=('emptydirs')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kdm-zsh-profile.patch' 'kdm' 'kde.pam' 'kde-np.pam' 'kscreensaver.pam'
         'fixpath.patch' 'terminate-server.patch' 'nm-09.patch')
