--- a/seamonkey/trunk/PKGBUILD
+++ b/seamonkey/trunk/PKGBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=seamonkey
 pkgver=2.0.14
-pkgrel=1
+pkgrel=2
 pkgdesc="SeaMonkey internet suite"
 arch=('i686' 'x86_64')
 license=('MPL')
-depends=('gtk2' 'mozilla-common' 'nss' 'libxt' 'gcc-libs' 'alsa-lib' 'dbus-glib')
-makedepends=('zip' 'pkg-config' 'libgnomeui>=2.24.2' 'python2' 'libidl2' 'autoconf2.13')
-replaces=('mozilla')
+depends=('gtk2' 'mozilla-common' 'nss' 'libxt' 'gcc-libs' 'alsa-lib' 'dbus-glib' 'desktop-file-utils')
+makedepends=('zip' 'pkg-config' 'libgnomeui' 'python2' 'libidl2' 'autoconf2.13')
+install=$pkgname.install
 url="http://www.mozilla.org/projects/seamonkey"
 source=(http://releases.mozilla.org/pub/mozilla.org/${pkgname}/releases/${pkgver}/source/${pkgname}-${pkgver}.source.tar.bz2
         mozconfig
@@ -19,7 +19,7 @@ source=(http://releases.mozilla.org/pub/mozilla.org/${pkgname}/releases/${pkgver
         gcc46.patch)
 md5sums=('2099ec0b71f950faad297a140b2702bc'
          '4978159e4921892e34dcd7e9804f0437'
-         '448848e65efcbf1b2be2873b66b6cd48'
+         '6119a2254716752c9d08e366f8d4c048'
          'a4275fc48361c80f676e96fdb28bd74e'
          '25b6fe16ac24cd5c852213e5c1adb272'
          '47e57931d65c71baafcf0e4f9160e876'
