--- a/seamonkey/trunk/seamonkey.desktop
+++ b/seamonkey/trunk/seamonkey.desktop
@@ -6,6 +6,6 @@ Type=Application
 Terminal=false
 MultipleArgs=false
 Name=SeaMonkey internet suite
-MimeType=text/html
+MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;message/rfc822;x-scheme-handler/mailto;
 StartupNotify=false
 Categories=Application;Network;
