Want libcanberra-pulse.
git-svn-id: file:///srv/repos/svn-packages/svn@122240 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gnome-settings-daemon/trunk/PKGBUILD
+++ b/gnome-settings-daemon/trunk/PKGBUILD
@@ -8,8 +8,8 @@ pkgdesc="The GNOME Settings daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libgnomekbd' 'gnome-desktop' 'libnotify' 'hicolor-icon-theme'
-         'libcanberra' 'gsettings-desktop-schemas' 'nss' 'gconf' 'dconf'
-         'pulseaudio' 'pulseaudio-alsa')
+         'libcanberra-pulse' 'gsettings-desktop-schemas' 'nss' 'gconf'
+         'dconf' 'pulseaudio' 'pulseaudio-alsa')
 makedepends=('intltool' 'gtk-doc')
 options=('!emptydirs' '!libtool')
 install=gnome-settings-daemon.install
