--- a/kdebase-workspace/trunk/PKGBUILD
+++ b/kdebase-workspace/trunk/PKGBUILD
@@ -15,7 +15,7 @@ groups=('kde')
 #	but nvidia providing libgl does not depend on libxdamage
 depends=('kdepim-runtime' 'lm_sensors' 'libraw1394' 'qimageblitz' 'libqalculate'
          'polkit-kde' 'consolekit' 'xorg-xprop' 'libxdamage' 'libxklavier' 'libdmtx'
-         'xorg-xsetroot' 'libxcomposite')
+         'xorg-xsetroot' 'libxcomposite' 'libxinerama')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'networkmanager' 'bluez'
              'python2' 'kdebindings-python')
 replaces=('kdmtheme' 'kde-common' 'guidance-power-manager' 'policykit-kde' 'kdebase-kinfocenter')
