upgpkg: grub2 1.99~rc2.r3238-1 rc2 contained some merge errors, these are corrected in the current bzr snapshot; fix mkconfig patch to handle initrd-less kernels correctly (not-tested)
git-svn-id: file:///srv/repos/svn-packages/svn@122264 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2/trunk/PKGBUILD
+++ b/grub2/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 # The src pkg includes grub2_bzr_export.sh to create newer grub-extras snapshots. Modify the paths in it accordingly.
 
-# _grub2_rev=3229
+# _grub2_rev=3238
 
 _grub2_lua_ver=20
 _grub2_gpxe_ver=12
@@ -12,7 +12,7 @@ _grub2_915_ver=7
 
 pkgname=('grub2-common' 'grub2-bios' 'grub2-efi-i386')
 pkgbase="grub2"
-pkgver='1.99~rc2'
+pkgver='1.99~rc2.r3238'
 pkgrel=1
 url="http://www.gnu.org/software/grub/"
 arch=('i686' 'x86_64')
@@ -20,13 +20,13 @@ license=('GPL3')
 makedepends=('bdf-unifont' 'python2' 'xz' 'autogen' 'texinfo' 'help2man' 'gettext' 'device-mapper')
 options=(strip purge docs zipman !emptydirs)
 
-source=("http://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.xz"
+#	"http://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.xz"
+source=("ftp://ftp.archlinux.org/other/grub2/grub-${pkgver}.tar.xz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_gpxe_r${_grub2_gpxe_ver}.tar.xz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_ntldr-img_r${_grub2_ntldr_ver}.tar.xz"
 	"ftp://ftp.archlinux.org/other/grub2/grub2_extras_915resolution_r${_grub2_915_ver}.tar.xz"
 	'archlinux_grub2_mkconfig_fixes.patch'
-	'fix_stack_pointer_handling_16_relocator.patch'
 	'grub.default'
 	'grub.cfg'
 	'20_memtest86+'
@@ -37,13 +37,12 @@ noextract=("grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
 	"grub2_extras_ntldr-img_r${_grub2_ntldr_ver}.tar.xz"
 	"grub2_extras_915resolution_r${_grub2_915_ver}.tar.xz")
 
-sha1sums=('786e7edb849e1bd2be917f574da92ebefd0e1915'
+sha1sums=('e5ae00ae7dee95a64599fdf7cf89c8518aa2de5c'
           '9f2dbf7a3faab24ca92266400aa513fecd3895c8'
           'b04994c005910b4bf123f034b30109d5c8d6fd86'
           'e0c1a97770cc23226cf4535c029ef50b17f67974'
           '8bcaed545956bb33581e1b97ac96a2c3717ec793'
-          '2b0c48b0121c47f0fc97871a08460420b4753b08'
-          '0d28fb02aec6a5fc5763482733ca07385a69aaaa'
+          '2bd3673db5616ff528ede82df62023e79b86c1cc'
           'e1477db3700b27b5e5ad3d8fa43028555204759b'
           '8948d89537c12a4202df7c001e65a77030bbe5a3'
           '82a27eca5277218cf57c6c5767e0b17a72f62229'
@@ -69,8 +68,6 @@ build_grub2-common_and_bios() {
 	## Apply Archlinux specific fixes to enable grub2-mkconfig detect Arch kernels and initramfs
 	cd ${srcdir}/grub2_bios-${pkgver}
 	patch -Np1 -i ${srcdir}/archlinux_grub2_mkconfig_fixes.patch
-	# Patch to fix memtest reboot issue https://bugs.archlinux.org/task/22993
-	patch -Np1 -i ${srcdir}/fix_stack_pointer_handling_16_relocator.patch
 
 	# add the grub-extra sources
 	export GRUB_CONTRIB=${srcdir}/grub2_bios-${pkgver}/grub2-extras/  
@@ -141,7 +138,7 @@ build_grub2-efi() {
 package_grub2-common() {
 	pkgdesc="The GNU GRand Unified Bootloader version 2 - Files common for all platforms"
 	install="grub2.install"
-	depends=('xz' 'freetype2' 'device-mapper' 'gettext')
+	depends=('xz' 'freetype2' 'device-mapper' 'gettext' 'texinfo')
 	conflicts=('grub')
 	backup=('boot/grub/grub.cfg' 'etc/default/grub' 'etc/grub.d/40_custom')
 	cd ${srcdir}/grub2_bios-${pkgver}
