upgpkg: grub2-efi-x86_64 1.99~rc2.r3238-1 bump to current bzr snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@122285 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/grub2-efi-x86_64/trunk/PKGBUILD
+++ b/grub2-efi-x86_64/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 ## This PKGBUILD has the same structure as the main grub2 split PKGBUILD for grub2-common, grub2-bios and grub2-efi-i386 .
 
-# _grub2_rev=3229
+# _grub2_rev=3238
 
 _grub2_lua_ver=20
 _grub2_gpxe_ver=12
 
 pkgname="grub2-efi-x86_64"
-pkgver='1.99~rc2'
+pkgver='1.99~rc2.r3238'
 pkgrel=1
 pkgdesc="The GNU GRand Unified Bootloader version 2 - x86_64 UEFI version"
 url="http://www.gnu.org/software/grub/"
@@ -21,14 +21,15 @@ makedepends=('python2' 'xz' 'autogen' 'texinfo' 'help2man' 'gettext')
 options=(strip purge docs zipman !emptydirs)
 replaces=('grub2-efi-x64')
 
-source=("http://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.xz"
+#"http://alpha.gnu.org/gnu/grub/grub-${pkgver}.tar.xz"
+source=("ftp://ftp.archlinux.org/other/grub2/grub-${pkgver}.tar.xz"
         "ftp://ftp.archlinux.org/other/grub2/grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
         "ftp://ftp.archlinux.org/other/grub2/grub2_extras_gpxe_r${_grub2_gpxe_ver}.tar.xz")
 
 noextract=("grub2_extras_lua_r${_grub2_lua_ver}.tar.xz"
            "grub2_extras_gpxe_r${_grub2_gpxe_ver}.tar.xz")
 
-sha1sums=('786e7edb849e1bd2be917f574da92ebefd0e1915'
+sha1sums=('e5ae00ae7dee95a64599fdf7cf89c8518aa2de5c'
           '9f2dbf7a3faab24ca92266400aa513fecd3895c8'
           'b04994c005910b4bf123f034b30109d5c8d6fd86')
 
