--- a/trunk/thunderbird.desktop
+++ b/trunk/thunderbird.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Thunderbird
 Comment=Mail & News Reader
 GenericName=Mail Client & News Reader
-Exec=thunderbird
+Exec=thunderbird %u
 TryExec=thunderbird
 Icon=thunderbird
 Terminal=false
