pass emails as argument to start the composer window. FS#24076
git-svn-id: file:///srv/repos/svn-packages/svn@122294 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/thunderbird/trunk/thunderbird.desktop
+++ b/thunderbird/trunk/thunderbird.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Thunderbird
 Comment=Mail & News Reader
 GenericName=Mail Client & News Reader
-Exec=thunderbird
+Exec=thunderbird %u
 TryExec=thunderbird
 Icon=thunderbird
 Terminal=false
