upgpkg: lzo2 2.05-1 bump to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@122309 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/lzo2/trunk/PKGBUILD
+++ b/lzo2/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Low Kian Seong <fastmail_low@speedymail.org>
 # Maintainer: dorphell <dorphell@archlinux.org>
 pkgname=lzo2
-pkgver=2.04
+pkgver=2.05
 pkgrel=1
 pkgdesc="Portable lossless data compression library"
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ license=('GPL')
 depends=('glibc')
 source=(http://www.oberhumer.com/opensource/lzo/download/lzo-${pkgver}.tar.gz)
 options=(!libtool)
-sha1sums=('f5bf5c7ae4116e60513e5788d156ef78946677e7')
+md5sums=('c67cda5fa191bab761c7cb06fe091e36')
 
 build() {
   cd "${srcdir}/lzo-${pkgver}"
