upgpkg: kaffeine 1.2.2-1 bump to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@122312 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kaffeine/trunk/PKGBUILD
+++ b/kaffeine/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kaffeine
-pkgver=1.2.1
+pkgver=1.2.2
 pkgrel=1
 pkgdesc='KDE media player'
 license=('GPL')
@@ -21,6 +21,10 @@ build() {
 		-DCMAKE_SKIP_RPATH=ON \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
+}
+
+package() {
+        cd $srcdir/build
 	make DESTDIR=$pkgdir install
 }
-md5sums=('e65a8558836f0aa0d173d76e51ad065f')
+md5sums=('690e48d2e5fe123887109aa9b1bc1c31')
