upgpkg: kshutdown 2.0-1 bump to latest version
git-svn-id: file:///srv/repos/svn-packages/svn@122317 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kshutdown/trunk/PKGBUILD
+++ b/kshutdown/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=kshutdown
-pkgver=2.0beta12
+pkgver=2.0
 pkgrel=1
 pkgdesc="Shutdown Utility for KDE"
 arch=(i686 x86_64)
@@ -27,4 +27,4 @@ package() {
     cd "${srcdir}/build"
 	make DESTDIR="${pkgdir}" install
 }
-md5sums=('392a345dab6fc4f6125007171bc8cb9c')
+md5sums=('af9d2bfda919e7712319e14e6ca89610')
