prepare 3.4 branch builds; improve menu entries; icons, manpages, mimetype files are still missing
git-svn-id: file:///srv/repos/svn-packages/svn@122322 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -349,10 +349,12 @@ package_libreoffice() {
 	# move sysui desktop files into place we want to use - javafilter and qstarter, but not unneeded printeradmin
 #	cp ${pkgdir}/usr/lib/libreoffice/share/xdg/javafilter.desktop ${pkgdir}/usr/share/applications/
 	cp ${pkgdir}/usr/lib/libreoffice/share/xdg/*.desktop ${pkgdir}/usr/share/applications/
+	rm ${pkgdir}/usr/share/applications/printeradmin.desktop
 #	sed -i -e "s/Exec=oo/Exec=so/g" ${pkgdir}/usr/share/applications/javafilter.desktop # https://bugs.archlinux.org/task/23361
 #	cp ${pkgdir}/usr/lib/libreoffice/share/xdg/qstart.desktop ${pkgdir}/usr/share/applications/
 	# remove version in menu entry and make it visible
-	sed -i -e "s/3.4 Quickstarter/Quickstarter/g" ${pkgdir}/usr/share/applications/qstart.desktop
+#	sed -i -e "s/3.4 Quickstarter/Quickstarter/g" ${pkgdir}/usr/share/applications/qstart.desktop
+	sed -i -e "s/3.4//g" ${pkgdir}/usr/share/applications/*.desktop
 	sed -i -e "/NoDisplay=true/d" ${pkgdir}/usr/share/applications/qstart.desktop
 	# remove unneeded .desktop files from vanilla sysui
 	rm -rf ${pkgdir}/usr/lib/libreoffice/share/xdg
