upgpkg: gtk2 2.24.4-2 krb5 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@122323 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gtk2/trunk/PKGBUILD
+++ b/gtk2/trunk/PKGBUILD
@@ -4,10 +4,10 @@
 pkgbase=gtk2
 pkgname=('gtk2' 'gtk-update-icon-cache')
 pkgver=2.24.4
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url="http://www.gtk.org/"
-makedepends=('atk' 'pango' 'libxcursor' 'libxinerama' 'libxrandr' 'libxi' 'libxcomposite' 'libxdamage' 'heimdal' 'gnutls'
+makedepends=('atk' 'pango' 'libxcursor' 'libxinerama' 'libxrandr' 'libxi' 'libxcomposite' 'libxdamage' 'krb5' 'gnutls'
              'shared-mime-info' 'cairo' 'libcups' 'gdk-pixbuf2' 'gobject-introspection')
 options=('!libtool' '!docs')
 license=('LGPL')
@@ -29,7 +29,7 @@ build() {
 package_gtk2() {
     pkgdesc="The GTK+ Toolkit (v2)"
     install=gtk2.install
-    depends=('atk' 'pango' 'libxcursor' 'libxinerama' 'libxrandr' 'libxi' 'libxcomposite' 'libxdamage' 'heimdal' 'gnutls' 'shared-mime-info' 'cairo' 'libcups' 'gtk-update-icon-cache')
+    depends=('atk' 'pango' 'libxcursor' 'libxinerama' 'libxrandr' 'libxi' 'libxcomposite' 'libxdamage' 'krb5' 'gnutls' 'shared-mime-info' 'cairo' 'libcups' 'gtk-update-icon-cache')
     backup=(etc/gtk-2.0/gtkrc)
 
     cd "${srcdir}/gtk+-${pkgver}"
