fix mounting ntfs partitions. FS#23701
git-svn-id: file:///srv/repos/svn-packages/svn@122326 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/udisks/trunk/PKGBUILD
+++ b/udisks/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=udisks
 pkgver=1.0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Disk Management Service"
 arch=('i686' 'x86_64')
 url="http://www.freedesktop.org/wiki/Software/udisks"
@@ -13,13 +13,16 @@ makedepends=('intltool' 'docbook-xsl' 'gtk-doc')
 options=(!libtool)
 #source=(http://hal.freedesktop.org/releases/${pkgname}-${pkgver}.tar.gz)
 source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.xz
-        01-mkfs-tempdir.patch)
+        01-mkfs-tempdir.patch
+        fix_well_known_filesystems.patch)
 sha256sums=('a4d18b2de59c1567df5342f26960c6c3e70a0320f7bafe42893f2708c9b57dd5'
-            '786c0adb1a37e16b351c906527e3cbd17193bb51d8c1dd0889f216556c419c6c')
+            '786c0adb1a37e16b351c906527e3cbd17193bb51d8c1dd0889f216556c419c6c'
+            '00d92030de44c5856c7408339c4849bf9b88b66d6cfa6617364b4e8d9ed2bc5e')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   patch -Np1 -i "${srcdir}/01-mkfs-tempdir.patch"
+  patch -Np1 -i "${srcdir}/fix_well_known_filesystems.patch"
   ./autogen.sh
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
       --libexecdir=/usr/lib/udisks --disable-static
